Fix figcaption text-align

--- a/css/framework.css
+++ b/css/framework.css
@@ -178,6 +178,7 @@ html, body, .container, .row-fluid, #page {
   left: 50%;
   top: 50%;
   width: 512px;
+  text-align: center;
 }
 
 .overlay figure.portrait {
@@ -190,10 +191,6 @@ html, body, .container, .row-fluid, #page {
   font-size: 13px;
   line-height: 20px;
   padding: 12px;
-}
-
-#page .slideshow figcaption {
-  height: 42px;
 }
 
 .overlay p {
@@ -320,6 +317,11 @@ button.pinterest {
   -webkit-transition-timing-function: ease-out;
   -webkit-transform: translate3d(0px,0px,0px);
   -webkit-box-shadow: 0px 1px 10px 1px rgba(0,0,0,0.3);
+  text-align: left;
+}
+
+#page .slideshow figcaption {
+  height: 42px;
 }
 
 #page div.slideshow img {
